@@ -8,76 +8,58 @@ import com.blamejared.controlling.platform.Services;
 import com.girafi.minemenu.gui.ScreenStack;
 import com.girafi.minemenu.menu.ClickActionScreen;
 import com.google.common.collect.ImmutableList;
-import net.minecraft.ChatFormatting;
 import net.minecraft.client.KeyMapping;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.GuiGraphics;
 import net.minecraft.client.gui.components.Button;
-import net.minecraft.client.gui.components.ContainerObjectSelectionList;
+import net.minecraft.client.gui.components.FocusableTextWidget;
 import net.minecraft.client.gui.components.events.GuiEventListener;
 import net.minecraft.client.gui.narration.NarratableEntry;
-import net.minecraft.client.gui.narration.NarratedElementType;
-import net.minecraft.client.gui.narration.NarrationElementOutput;
 import net.minecraft.client.gui.screens.Screen;
 import net.minecraft.client.gui.screens.options.controls.KeyBindsList;
+import net.minecraft.client.input.MouseButtonEvent;
 import net.minecraft.network.chat.CommonComponents;
 import net.minecraft.network.chat.Component;
 import net.minecraft.network.chat.MutableComponent;
+import net.minecraft.network.chat.contents.TranslatableContents;
+import net.minecraft.util.CommonColors;
 import org.apache.commons.lang3.ArrayUtils;
 
 import javax.annotation.Nonnull;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.Objects;
 import java.util.function.UnaryOperator;
 
-public class ControllingGuiControlList extends ContainerObjectSelectionList<KeyBindsList.Entry> {
-    private final Minecraft mc;
+public class ControllingGuiControlList extends ControllingCustomList {
     private int maxListLabelWidth;
-    public List<KeyBindsList.Entry> allEntries;
 
     public ControllingGuiControlList(Screen parent, Minecraft mc) {
         super(mc, parent.width + 20, parent.height - 70, 45, 20);
-        this.mc = mc;
-        children().clear();
+        this.clearEntries();
         allEntries = new ArrayList<>();
-        KeyMapping[] bindings = ArrayUtils.clone(mc.options.keyMappings);
+        KeyMapping[] bindings = ArrayUtils.clone(minecraft.options.keyMappings);
         Arrays.sort(bindings);
-        String lastCategory = null;
+        KeyMapping.Category lastCategory = null;
 
-        for (KeyMapping keybinding : bindings) {
-            String category = keybinding.getCategory();
-            if (!category.equals(lastCategory)) {
+        for (KeyMapping keyMapping : bindings) {
+            KeyMapping.Category category = keyMapping.getCategory();
+            if (category != lastCategory) {
                 lastCategory = category;
-                if (!category.endsWith(".hidden")) {
-                    addEntry(new CategoryEntry(Component.translatable(category)));
+                if(!isHidden(category.label())) {
+                    addEntry(new CategoryEntry(category));
                 }
             }
 
-            Component component = Component.translatable(keybinding.getName());
+            Component component = Services.PLATFORM.getKeyName(keyMapping);
             int width = mc.font.width(component);
             if (width > this.maxListLabelWidth) {
                 this.maxListLabelWidth = width;
             }
-            if (!category.endsWith(".hidden")) {
-                addEntry(new KeyEntry(keybinding, component));
+            if(!isHidden(category.label())) {
+                addEntry(new KeyEntry(keyMapping, component));
             }
         }
-    }
-
-    public List<KeyBindsList.Entry> getAllEntries() {
-        return allEntries;
-    }
-
-    @Override
-    protected int addEntry(@Nonnull KeyBindsList.Entry ent) {
-        if (allEntries == null) {
-            allEntries = new ArrayList<>();
-        }
-        allEntries.add(ent);
-        this.children().add(ent);
-        return this.children().size() - 1;
     }
 
     @Override
@@ -85,94 +67,91 @@ public class ControllingGuiControlList extends ContainerObjectSelectionList<KeyB
         return super.getRowWidth() + 32;
     }
 
+    private boolean isHidden(Component component) {
+        if(component.getContents() instanceof TranslatableContents tc) {
+            return tc.getKey().endsWith(".hidden");
+        }
+        return false;
+    }
+
     public class CategoryEntry extends KeyBindsList.Entry implements ICategoryEntry {
-        private final Component name;
-        private final int labelWidth;
+        private final FocusableTextWidget categoryName;
+        private KeyMapping.Category category;
 
-        public CategoryEntry(Component name) {
-            this.name = name;
-            this.labelWidth = ControllingGuiControlList.this.mc.font.width(this.name);
+        public CategoryEntry(KeyMapping.Category category) {
+            this.categoryName = new FocusableTextWidget(ControllingGuiControlList.this.getRowWidth(), category.label(), ControllingGuiControlList.this.minecraft.font, false, FocusableTextWidget.BackgroundFill.ON_FOCUS, 4);
+            this.category = category;
         }
 
         @Override
-        public void render(GuiGraphics guiGraphics, int slotIndex, int y, int x, int rowLeft, int rowWidth, int mouseX, int mouseY, boolean hovered, float partialTicks) {
-            guiGraphics.drawString(ControllingGuiControlList.this.mc.font, this.name, Objects.requireNonNull(minecraft.screen).width / 2 - this.labelWidth / 2, y + rowWidth - 9 - 1, -1);
-        }
-
-        @Override
-        @Nonnull
-        public List<? extends NarratableEntry> narratables() {
-
-            return ImmutableList.of(new NarratableEntry() {
-                @Override
-                @Nonnull
-                public NarrationPriority narrationPriority() {
-                    return NarrationPriority.HOVERED;
-                }
-
-                @Override
-                public void updateNarration(@Nonnull NarrationElementOutput neo) {
-                    neo.add(NarratedElementType.TITLE, name);
-                }
-            });
+        public void renderContent(GuiGraphics guiGraphics, int mouseX, int mouseY, boolean isHovering, float partialTick) {
+            this.categoryName.setPosition(ControllingGuiControlList.this.width / 2 - this.categoryName.getWidth() / 2, this.getContentBottom() - 9 - 1);
+            this.categoryName.render(guiGraphics, mouseX, mouseY, partialTick);
         }
 
         @Override
         @Nonnull
         public List<? extends GuiEventListener> children() {
-            return ImmutableList.of();
+            return List.of(this.categoryName);
         }
 
         @Override
-        protected void refreshEntry() {
+        @Nonnull
+        public List<? extends NarratableEntry> narratables() {
+            return List.of(this.categoryName);
         }
 
         @Override
-        public Component name() {
-            return this.name;
+        protected void refreshEntry() {}
+
+        @Override
+        public KeyMapping.Category category() {
+            return this.category;
         }
     }
 
     public class KeyEntry extends KeyBindsList.Entry implements IKeyEntry {
         private final KeyMapping key;
         private final Component keyDesc;
-        private boolean hasCollision;
         private final Component categoryName;
+        private boolean hasCollision;
         private final Button buttonSelect;
 
         private KeyEntry(final KeyMapping key, final Component keyDesc) {
             this.key = key;
             this.keyDesc = keyDesc;
-            this.categoryName = Component.translatable(this.key.getCategory());
-            this.buttonSelect = Button.builder(keyDesc, (screen) -> {
-                ClickActionScreen.keyBinding = key;
-                ScreenStack.pop();
-            }).bounds(0, 0, 95, 18).build();
-            refreshEntry();
+            this.buttonSelect = Button.builder(key.getTranslatedKeyMessage(), (screen) -> {
+                        ClickActionScreen.keyBinding = key;
+                        ScreenStack.pop();
+                    }).bounds(0, 0, 95, 18)
+                    .createNarration(
+                            p_346090_ -> key.isUnbound()
+                                    ? Component.translatable("narrator.controls.unbound", keyDesc)
+                                    : Component.translatable("narrator.controls.bound", keyDesc, p_346090_.get())
+                    ).build();
+            this.categoryName = this.key.getCategory().label();
+            this.refreshEntry();
         }
-
         @Override
-        public void render(@Nonnull GuiGraphics guiGraphics, int slotIndex, int y, int x, int rowLeft, int rowWidth, int mouseX, int mouseY, boolean hovered, float partialTicks) {
-            //Services.EVENT.fireKeyEntryRenderEvent(this, guiGraphics, slotIndex, y, x, rowLeft, rowWidth, mouseX, mouseY, hovered, partialTicks);
-            int length = Math.max(0, x + 90 - ControllingGuiControlList.this.maxListLabelWidth);
-            guiGraphics.drawString(ControllingGuiControlList.this.mc.font, this.keyDesc, length, y + rowWidth / 2 - 9 / 2, -1);
-            this.buttonSelect.setX(x + 105);
-            this.buttonSelect.setY(y);
-            this.buttonSelect.setMessage(this.key.getTranslatedKeyMessage());
-            this.buttonSelect.render(guiGraphics, mouseX, mouseY, partialTicks);
+        public void renderContent(@Nonnull GuiGraphics guiGraphics, int mouseX, int mouseY, boolean isHovering, float partialTick) {
+            int x = ControllingGuiControlList.this.scrollBarX() - 10;
+            int y = this.getContentY() - 2;
+            int k = x - 5 - this.buttonSelect.getWidth();
+            this.buttonSelect.setPosition(k, y);
+            this.buttonSelect.render(guiGraphics, mouseX, mouseY, partialTick);
+            guiGraphics.drawString(ControllingGuiControlList.this.minecraft.font, this.keyDesc, this.getContentX() - this.buttonSelect.getWidth() / 2, this.getContentYMiddle() - 9 / 2, -1);
 
-            if (this.hasCollision) {
+            if(this.hasCollision) {
                 int markerWidth = 3;
                 int minX = this.buttonSelect.getX() - 6;
-                guiGraphics.fill(minX, y + 2, minX + markerWidth, y + rowWidth + 2, ChatFormatting.RED.getColor() | -16777216);
+                guiGraphics.fill(minX, this.getContentY() - 1, minX + markerWidth, this.getContentBottom(), CommonColors.YELLOW);
             }
         }
 
         @Override
         @Nonnull
         public List<GuiEventListener> children() {
-            return ImmutableList.of(this.buttonSelect);
-            //return Services.EVENT.fireKeyEntryListenersEvent(this).map(IKeyEntryListenersEvent::getListeners, UnaryOperator.identity());
+            return List.of(this.buttonSelect);
         }
 
         @Override
@@ -182,22 +161,19 @@ public class ControllingGuiControlList extends ContainerObjectSelectionList<KeyB
         }
 
         @Override
-        public boolean mouseClicked(double mouseX, double mouseY, int buttonId) {
-            if (Services.EVENT.fireKeyEntryMouseClickedEvent(this, mouseX, mouseY, buttonId).map(IKeyEntryMouseClickedEvent::isHandled, UnaryOperator.identity())) {
+        public boolean mouseClicked(MouseButtonEvent event, boolean isDoubleClick) {
+            if (Services.EVENT.fireKeyEntryMouseClickedEvent(this, event, isDoubleClick).map(IKeyEntryMouseClickedEvent::isHandled, UnaryOperator.identity())) {
                 return true;
             }
-
-            return this.buttonSelect.mouseClicked(mouseX, mouseY, buttonId);
+            return this.buttonSelect.mouseClicked(event, isDoubleClick);
         }
 
-
         @Override
-        public boolean mouseReleased(double mouseX, double mouseY, int buttonId) {
-            if (Services.EVENT.fireKeyEntryMouseReleasedEvent(this, mouseX, mouseY, buttonId).map(IKeyEntryMouseReleasedEvent::isHandled, UnaryOperator.identity())) {
+        public boolean mouseReleased(@Nonnull MouseButtonEvent event) {
+            if (Services.EVENT.fireKeyEntryMouseReleasedEvent(this, event).map(IKeyEntryMouseReleasedEvent::isHandled, UnaryOperator.identity())) {
                 return true;
             }
-
-            return this.buttonSelect.mouseReleased(mouseX, mouseY, buttonId);
+            return this.buttonSelect.mouseReleased(event);
         }
 
         @Override
@@ -214,11 +190,11 @@ public class ControllingGuiControlList extends ContainerObjectSelectionList<KeyB
                         }
 
                         this.hasCollision = true;
-                        duplicates.append(Component.translatable(mapping.getName()));
+                        duplicates.append(Services.PLATFORM.getKeyName(mapping));
                     }
                 }
             }
-            MutableComponent tooltip = Component.translatable(key.getCategory());
+            MutableComponent tooltip = this.categoryName().copy();
             if (this.hasCollision) {
                 tooltip.append(CommonComponents.NEW_LINE);
                 tooltip.append(Component.translatable("controls.keybinds.duplicateKeybinds", duplicates));
@@ -249,5 +225,6 @@ public class ControllingGuiControlList extends ContainerObjectSelectionList<KeyB
         public Button getBtnChangeKeyBinding() {
             return null;
         }
+
     }
 }
